[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crack_seg"
version = "0.1.0"
description = "Concrete crack surface segmentation"
authors = [{name = "Abinash Mandal", email = "abinashmandal33486@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["crack_seg*"]  # finds the crack_seg package